--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "express": "^5.0.0-alpha.8",
     "knex": "^0.95.12",
-    "mysql2": "^2.3.2"
+    "mysql2": "^2.3.2",
+    "objection": "^3.0.0-alpha.4"
   },
   "devDependencies": {
     "eslint": "^8.1.0",
