--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "env $(cat .env.local) nodemon index.js",
+    "knex": "env $(cat .env.local) knex",
+    "lint": "next lint"
   },
   "repository": {
     "type": "git",
