feat:Create Rel_tables, Modify  category.js Shop.js categoryRoute.js shopRoute.js

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^5.0.0-alpha.8",
     "knex": "^0.95.12",
     "mysql2": "^2.3.2",
-    "objection": "^3.0.0-alpha.4"
+    "objection": "^3.0.0-alpha.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "^8.1.0",
