--- a/package.json
+++ b/package.json
@@ -25,12 +25,9 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^5.0.0-alpha.8",
-    "ioredis": "^4.28.0",
     "knex": "^0.95.12",
     "mysql2": "^2.3.2",
-    "objection": "^3.0.0-alpha.4",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "objection": "^3.0.0-alpha.4"
   },
   "devDependencies": {
     "eslint": "^8.1.0",
